--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тренировка для Жени и Саши</title>
+    <title>Тренировка</title>
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
@@ -30,6 +30,6 @@
     
     <div id="canvas"></div>
     <script src="js/p5.min.js"></script>
-    <!-- <script src="js/sketch.js"></script> -->
+    <script src="js/sketchOne.js"></script>
 </body>
 </html>
