--- a/pages/exercise.html
+++ b/pages/exercise.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Тренировки дома</title>
+    <link rel="shortcut icon" href="../favicon.svg" type = "image/svg">
     <!-- Подключаем шаблонизатор -->
     <script src="../js/ejs.min.js"></script>
     <!-- Подключаем файл с данными -->
