--- a/pages/rest.html
+++ b/pages/rest.html
@@ -27,7 +27,7 @@
 
     <div id="canvas"></div>
     <script src="../js/p5.min.js"></script>
-    <script src="../js/sketch.js"></script>
+    <script src="../js/sketchRest.js"></script>
 </body>
 
 </html>
