--- a/pages/warmup.html
+++ b/pages/warmup.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Тренировки дома. Главная</title>
+    <link rel="shortcut icon" href="../favicon.svg" type = "image/svg">
     <link rel="stylesheet" href="../styles/index.css">
     <script src="../js/ejs.min.js"></script>
     <script src="../js/data.js"></script>
